cluster/manifests/memory-bank/overlays/dev/cloudevents-ingress/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: cloudevents-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: cloudevents-ingress
  mtls:
    mode: STRICT
