cluster/manifests/memory-bank/overlays/dev/cloudevents-ingress/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: cloudevents-ingress
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: cloudevents-ingress
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - knative-eventing/kafka-broker-ingress.knative-eventing.svc.cluster.local
